tests/negative/typecheck/typeclass_eq.orng
fn main() -> Bool {
    let x: Void = unreachable
    let y: Void = unreachable
    x == y // the ONLY type that isn't equalable
}